# vestaboard

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Pipfile  README.md  api.py  config.py  fly.toml  main.py  orchestrator.py  pyproject.toml  transform_functions.py
.cursor/: mcp.json
.cursor/commands/: deploy.mdc
.cursor/rules/: docs.mdc  engineering-manager.mdc  infrastructure-engineer.mdc  product-engineer.mdc  quality-engineer.mdc  software-engineer.mdc  ux-engineer.mdc
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DisplayNameModal.tsx  GridCell.tsx  InstallableManager.tsx  KeyboardHandler.tsx  VestaboardGrid.tsx
frontend/components/ui/: dialog.tsx
frontend/lib/: api-client.ts  display-name.ts  grid-utils.ts  vestaboard-codes.ts
installables/: __init__.py  _base.py  clock.py  mlb_scores.py  plant_reminder.py  spotify.py
installables/clock/: app.py  models.py
installables/sports/mlb/: app.py  models.py
installables/spotify/: app.py
vestaboard/: __init__.py  _style.py  _write.py  app.py  logging.py  models.py  utils.py
vestaboard/config/: settings.py
